Applies minor spacing fixes for mobile

--- a/app/styles/contact.sass
+++ b/app/styles/contact.sass
@@ -18,8 +18,6 @@ $contact-form-line-height: 20px
 
 .Contact-contents
   +make-container()
-  margin-top: 60px
-  margin-bottom: 60px
 
 .Contact-title
   margin: 30px 0
