--- a/app/styles/recordings.sass
+++ b/app/styles/recordings.sass
@@ -1,4 +1,7 @@
 $recording-embed-height: 166px
+.Recordings
+  padding-left: 15px
+  padding-right: 15px
 
 .Recording
   margin-bottom: $grid-gutter-width
